deploy/k8s/monitoring/grafana-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-clusterissuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.lab
      secretName: grafana-lab-tls
  rules:
    - host: grafana.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
